# KNULabs

CNNforVisualRecognition/lab3/: cnn.py
SpeechProcessingAndRecognition/: task02.py  task04.py
data_mining/: README.md
data_security/lab1/: fgsm_attack.py  noise_attack.py
data_security/lab2/: client_app.py  pyproject.toml  server_app.py  task.py
formal_methods/: task1.dfy  task2.dfy
masters/label-studio/: requirements.txt
masters/pdf-to-img/: README.md  TODO.md  build_block_dataset.py  build_dataset.py  comparison.txt  mapping.py  ocr_postprocess.py  pdf_to_png.py  png_ocr.py  post_labelling_mapping.py  project-6-at-2026-03-31-15-30-3adfa9dd.json  requirements.txt  sample_json.excalidraw  serve.py  tokens_mapped_blocks.json
masters/pdf-to-img/dataset/Focus_3_-_Student_book_-_2020/hf_dataset/: id2label.json  label2id.json
masters/pdf-to-img/dataset/Focus_3_-_Student_book_-_2020/mapped/: page_004_labeled.json  page_005_labeled.json  page_006_labeled.json  page_007_labeled.json  page_008_labeled.json  page_009_labeled.json  page_010_labeled.json  page_011_labeled.json  page_012_labeled.json  page_013_labeled.json  page_014_labeled.json  page_016_labeled.json  page_017_labeled.json  page_018_labeled.json  page_019_labeled.json  page_020_labeled.json  page_021_labeled.json  page_022_labeled.json  page_023_labeled.json  page_024_labeled.json  page_025_labeled.json  page_026_labeled.json  page_027_labeled.json  page_028_labeled.json  page_030_labeled.json  page_031_labeled.json
mip-labs/lab1/: README.md
(+503 files in other folders)
